<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>

    <TextView
		android:id="@+id/info"
		android:layout_weight="1"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:text="@string/main_window_text"
		/>
	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/main_button_aprsdroid"
		android:onClick="onStartService"
		/>
	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/main_button_send_parameters"
		android:onClick="onSendParams"
		/>
	<Button
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/main_button_send_values"
		android:onClick="onSendValues"
		/>
</LinearLayout>

